archdesignapideployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: architacturalapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: architacturalapi
  template:
    metadata:
      labels:
        app: architacturalapi
    spec:
      containers:
        - name: architacturalapi
          image: 735521274598293/architacturalapi:latest
          ports:
            - containerPort: 8080
