archdesignapiLoadBalancerService.yml
apiVersion: v1
kind: Service
metadata:
  name: architacturalapi-loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: architacturalapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30009
