archdesignapiIngressNginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arcdesignapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    # - host: arcdesignapi.service.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: architacturalapi-loadbalancer-service
    #             port:
    #               number: 80
    - host: arcdesignapi.service.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: architacturalapi-service
                port:
                  number: 80
